[gd_scene load_steps=5 format=3 uid="uid://c68kkw8j2ncco"]

[ext_resource type="Script" path="res://Options_Menu.gd" id="1_joneh"]
[ext_resource type="FontFile" uid="uid://d4gloc7rb6s5s" path="res://Assets/Font/vinque rg.otf" id="2_ru6ls"]
[ext_resource type="AudioStream" uid="uid://dpmica7dit60i" path="res://Assets/Sounds/Audacity/blacksmith2.mp3" id="3_ormfo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hve4o"]

[node name="Options_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = -1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_joneh")

[node name="MuteMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 477.0
offset_top = 82.0
offset_right = 654.0
offset_bottom = 137.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="MuteCheck" type="CheckButton" parent="MuteMarginContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ru6ls")
theme_override_font_sizes/font_size = 18
text = "Mute Music"

[node name="Options_Label" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 501.0
offset_top = 5.0
offset_right = 633.0
offset_bottom = 59.0
theme_override_fonts/normal_font = ExtResource("2_ru6ls")
theme_override_font_sizes/normal_font_size = 32
text = "Options"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 475.0
offset_top = 400.0
offset_right = 653.0
offset_bottom = 437.0

[node name="BackToMenuButton" type="Button" parent="MarginContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ru6ls")
theme_override_font_sizes/font_size = 20
text = "Back to Main Menu"

[node name="ThwakToMainMenu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_ormfo")

[node name="Hammer" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hve4o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 500.0
offset_top = 200.0
offset_right = 576.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ru6ls")
theme_override_font_sizes/font_size = 18
text = "Resolution"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Change Game Resolution"
item_count = 4
selected = 1
allow_reselect = true
popup/item_0/text = "640x480"
popup/item_0/id = 0
popup/item_1/text = "1152x648"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="toggled" from="MuteMarginContainer/MuteCheck" to="." method="_on_mute_check_toggled"]
[connection signal="pressed" from="MarginContainer2/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
